fix the buttons on page
level_l1_p1 buttons not showing on some screens

--- a/css/level_l1_p1.css
+++ b/css/level_l1_p1.css
@@ -36,9 +36,8 @@ body{
 
 .container{
 	position: relative;
-	height: 630pt;
-	width: 100%;
-	
+	height: 93vh;
+	width: 100%;	
 }
 
 .nav_arrows:after{
